# gujarat-landchain

./: .env.example  .gitignore  Anchor.toml  Dockerfile.solana-dev  LICENSE  PROJECT_COMPLETION_SUMMARY.md  README.md  SPRINT_6_PLAN.md  SPRINT_ROADMAP.md  ULPIN-JuliaOS-Complete-Guide.ipynb  package-lock.json  package.json  quick-start.sh
.github/workflows/: ci-cd.yml  deploy-contracts.yml  security-updates.yml
agents/mint-agent/: IPFSIntegration.jl  MetadataCreator.jl  MintAgent.jl  example_usage.jl
ai/: evidence_bundle_generator.py  langchain_legal_parser.py
ai/__tests__/: dispute_resolution.test.py
apps/citizen-pwa/: package.json  tailwind.config.js
apps/official-dashboard/: README.md  next.config.js  package.json  tailwind.config.js
backend/: governance_api.py
contracts/: CrossChainAtomicSwap.sol
contracts/ethereum/: .env.example  .solhint.json  ULPINLandRegistry.sol  check-balance.js  package.json  (+4 more)
contracts/solana/programs/bridge/: Anchor.toml  Cargo.toml  package.json  pnpm-lock.yaml
contracts/solana/programs/bridge/src/: lib.rs
frontend/: App.jsx  README.md  index.css  index.html  main.jsx  package.json  tailwind.config.js  vite.config.js
julia/: atomic_swap_integration_testing.jl  automated_fee_distribution_system.jl  cross_chain_bridge_config.jl  image_preprocessing_pipeline.jl  ipfs_storage_integration.jl  large_scale_swarm_testing.jl  nft_freeze_integration.jl  satellite_ingestion_agent.jl  sprint3_complete_integration.jl  sprint4_complete_integration.jl  swarm_voting_logic.jl  yolov8_land_validation_training.jl
pwa/: next.config.js  package.json  tailwind.config.js
scripts/: deploy-gl0502-atomic-swap.js
security/: slither-analysis.sh
services/ai-service/: pyproject.toml
(+86 files in other folders)
